--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-"update_url": "https://clients2.google.com/service/update2/crx",
+  "update_url": "https://clients2.google.com/service/update2/crx",
 
   "manifest_version": 2,
   "name": "Multi Highlight",
@@ -12,34 +12,17 @@
     },
     "default_popup": "popup.html"
   },
-  "icons": { 
+  "icons": {
     "16": "img/logo16.png",
     "48": "img/logo48.png",
     "128": "img/logo128.png",
     "350": "img/logo350.png"
   },
-  "content_scripts": [ {
-      "matches": [ "<all_urls>" ],
-      "js": [ "jquery/jquery.js", "jquery/jquery.highlight.js", "popup.js" ],
-      "css": [ "highlight.css" ]
-   } ],
-  "background": {
-    "scripts": [ "lib.js", "background.js" ],
-    "persistent": false
-  },
-  "commands": {
-    "_execute_browser_action": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+F",
-        "mac": "Command+Shift+F",
-        "chromeos": "Ctrl+Shift+F",
-        "linux": "Ctrl+Shift+F"
-      },
-      "description": "Activate the extension"
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["jquery/jquery.js", "jquery/jquery.highlight.js", "lib.js"],
+      "css": ["highlight.css"]
     }
-  },
-  "options_page": "options/options.html",
-  "permissions": [
-  "activeTab", "http://*/*", "https://*/*", "storage", "contextMenus"
   ]
 }
