Tooltip fix and quick look on page update

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,5 +24,9 @@
       "js": ["jquery/jquery.js", "jquery/jquery.highlight.js", "lib.js"],
       "css": ["highlight.css", "jquery/tooltip.css"]
     }
-  ]
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  }
 }
